# planets-3d

./: .gitignore  CMakeLists.txt  LICENSE  Planets3D.pro  Planets3D.rc.in  README  README.md  camera.cpp  camera.h  common.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  planet.cpp  planet.h  planetswidget.cpp  planetswidget.h  resources.qrc
bench/: bench.cpp
cmake/: CreateResources.cmake  FindNFD.cmake  FindSDL2.cmake  FindSDL2_image.cmake
forms/: mainwindow.ui
gamepad/: sdlgamepad.cpp  sdlgamepad.h
include/: camera.h  common.h  mainwindow.h  planet.h  planetsuniverse.h  planetswidget.h  spheregenerator.h  version.h
js/: bindings.cpp  gamepadbinding.cpp  glbindings.h  gridbinding.cpp  index.html  miscbindings.cpp  placingbinding.cpp  planets.js  spheres.cpp  universebinding.cpp
js/scripts/: planets-interface.js  planets-io.js  planets-webgl.js
js/stylesheets/: planetsui.css
js/systems/: default.xml
lib/: CMakeLists.txt
lib/include/: camera.h  grid.h  placinginterface.h  planet.h  planetsuniverse.h  platform.h  spheregenerator.h  types.h  version.h
lib/src/: camera.cpp  grid.cpp  placinginterface.cpp  planet.cpp  planetsuniverse.cpp  spheregenerator.cpp  version.cpp.in
qt/: CMakeLists.txt  Planets3D.rc.in  resources.qrc
qt/forms/: mainwindow.ui
qt/include/: mainwindow.h  planetswidget.h
qt/qt4/: CMakeLists.txt
qt/qt5/: CMakeLists.txt
qt/shaders/: color.fsh  color.vsh  texture.fsh  texture.vsh
qt/src/: main.cpp  mainwindow.cpp  planetswidget.cpp
qt4/: CMakeLists.txt
qt5/: CMakeLists.txt
sdl/: CMakeLists.txt  Planets3D.rc.in
sdl/include/: planetswindow.h  shaders.h
sdl/shaders/: color.fsh  color.vsh  texture.fsh  texture.vsh  ui.fsh  ui.vsh
sdl/src/: main.cpp  planetswindow.cpp  shaders.cpp
shaders/: color.fsh  color.vsh  texture.fsh  texture.vsh  vertex.vsh
src/: camera.cpp  main.cpp  mainwindow.cpp  planet.cpp  planetsuniverse.cpp  planetswidget.cpp  spheregenerator.cpp  version.cpp.in
src/lib/: camera.cpp
